tabhotkeyindicators/chrome.css
@counter-style blank {
  system: cyclic;
  symbols: "";
}
@counter-style tabhint {
  system: fixed;
  symbols: "1" "2" "3" "4" "5" "6" "7" "8";
  suffix: "";
  fallback: blank;
}

#TabsToolbar {
  counter-reset: tabcounter;
}

@media not (-moz-pref("mod.tab_hotkey_hints.essentials")) {
  #zen-essentials .tab-content::after {
    display: none;
  }
}

@media -moz-pref("mod.tab_hotkey_hints.last_tab") {
  zen-workspace[active="true"]
  tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(2)
  .tab-content::before {
    content: "9";
    z-index: 1;
    font-size: var(--mod-tab_hotkey_hints-font_size);
    font-weight: var(--mod-tab_hotkey_hints-font_weight);
    position: absolute;
    opacity: var(--mod-tab_hotkey_hints-opacity);
    color: var(--mod-tab_hotkey_hints-color);
    text-shadow: var(--mod-tab_hotkey_hints-text_shadow);
    @media (-moz-pref("mod.tab_hotkey_hints.position", "topright")) {
        right: var(--mod-tab_hotkey_hints-h_margin);
        top: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "topleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin);
        top: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "botright")) {
        right: var(--mod-tab_hotkey_hints-h_margin);
        bottom: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "botleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin);
        bottom: var(--mod-tab_hotkey_hints-v_margin);
    }
  }
}
#tabbrowser-tabs {
  #zen-essentials .tab-content,
  zen-workspace[active="true"] tab[aria-hidden="true"][folder-active="true"] .tab-content,
  zen-workspace[active="true"] tab:not([aria-hidden="true"]) .tab-content {
    counter-increment: tabcounter;
  }
  .tab-content::after {
    content: counter(tabcounter, tabhint);
    font-size: var(--mod-tab_hotkey_hints-font_size);
    font-weight: var(--mod-tab_hotkey_hints-font_weight);
    position: absolute;
    opacity: var(--mod-tab_hotkey_hints-opacity);
    color: var(--mod-tab_hotkey_hints-color);
    text-shadow: var(--mod-tab_hotkey_hints-text_shadow);
  }
}
#tabbrowser-tabs {
  #zen-essentials .tab-content::after {
    @media (-moz-pref("mod.tab_hotkey_hints.position_essentials", "topright")) {
        right: var(--mod-tab_hotkey_hints-h_margin_essentials);
        top: var(--mod-tab_hotkey_hints-v_margin_essentials);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position_essentials", "topleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin_essentials);
        top: var(--mod-tab_hotkey_hints-v_margin_essentials);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position_essentials", "botright")) {
        right: var(--mod-tab_hotkey_hints-h_margin_essentials);
        bottom: var(--mod-tab_hotkey_hints-v_margin_essentials);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position_essentials", "botleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin_essentials);
        bottom: var(--mod-tab_hotkey_hints-v_margin_essentials);
    } 
  }
  zen-workspace[active="true"] .tab-content::after {
    @media (-moz-pref("mod.tab_hotkey_hints.position", "topright")) {
        right: var(--mod-tab_hotkey_hints-h_margin);
        top: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "topleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin);
        top: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "botright")) {
        right: var(--mod-tab_hotkey_hints-h_margin);
        bottom: var(--mod-tab_hotkey_hints-v_margin);
    }
    @media (-moz-pref("mod.tab_hotkey_hints.position", "botleft")) {
        left: var(--mod-tab_hotkey_hints-h_margin);
    }
  }
}

